# gaba-burn

./: .gitignore  Cargo.toml  FAMIGLIA_ROUTES_INTEGRATION.md  README.md  model_config.toml  test_overpower.sh
.github/workflows/: bench-zig.yml  gaba-ci.yml  test.yml
crates/burn-common/src/: device.rs  error.rs  lib.rs
crates/burn-inference/: Cargo.toml
crates/burn-inference/src/: error.rs  lib.rs  route_time.rs  traffic.rs
crates/burn-ndarray/src/: backend.rs
crates/burn-rocm/src/: lib.rs
crates/burn-store/benches/: download_resnet18.py  generate_unified_models.py  resnet18_loading.rs  unified_loading.rs  unified_saving.rs
crates/burn-store/examples/: burnpack_inspect.rs
crates/burn-store/src/pytorch/tests/reader/: test_data.py
crates/burn-tensor/src/: gaba_vector.rs
crates/burn-tensor/src/tensor/backend/: device.rs
crates/famiglia-routes-api/: Cargo.toml
crates/famiglia-routes-api/src/: main.rs
crates/gaba-burn-vector/src/: cpu_search.rs
crates/gaba-burn-vector/tests/: test_search_fixture.rs
crates/gaba-export/: Cargo.toml  build.rs
crates/gaba-export/proto/: onnx.proto
crates/gaba-export/src/: coreml.rs  lib.rs  onnx.rs  tflite.rs  webnn.rs
crates/gaba-memory/: Cargo.toml  README.md
crates/gaba-memory/benches/: memory_bench.rs
crates/gaba-memory/src/: associations.rs  engram.rs  hnsw.rs  hopfield.rs  lib.rs  temporal.rs  vector_store.rs
crates/gaba-metal-backend/: Cargo.toml
crates/gaba-metal-backend/src/: backend.rs  error.rs  lib.rs  unified_memory.rs
crates/gaba-metal-backend/src/shaders/: kernels.metal
crates/gaba-metal-backend/tests/: unified_memory_test.rs
crates/gaba-native-kernels/: Cargo.toml  baseline_benchmark.txt  build.rs  ml_kernels_bench.txt  post_optimization_gemm.txt
crates/gaba-native-kernels/benches/: bench_gemm.rs  bench_ml_kernels.rs
crates/gaba-native-kernels/examples/: quick_bench.rs  route_optimization.rs
crates/gaba-native-kernels/native/: attention.zig  conv2d.zig  gemm.zig  gemm_q8.zig  gemm_ultra.zig  layernorm.zig  route_distance.zig  simd_gemm.zig  softmax.zig  tsp_solver.zig
crates/gaba-native-kernels/src/: accelerate.rs  amx_int8.rs  batch_norm.rs  conv2d.rs  dropout.rs  fusion.rs  lib.rs  lstm.rs  metal_gpu.rs  ml_route_optimizer.rs  per_channel_quant.rs  quantization.rs  route_optimizer.rs  transformer.rs
crates/gaba-native-kernels/src/shaders/: gemm.metal
crates/gaba-native-kernels/tests/: simd_test.rs
crates/gaba-pqc/: Cargo.toml
crates/gaba-pqc/src/: error.rs  lib.rs  metal_accel.rs  seal.rs
crates/gaba-pqc/src/shaders/: blake3.metal
crates/gaba-pqc/tests/: integration_test.rs
crates/gaba-serve/: Cargo.toml
crates/gaba-serve/src/: api.rs  batching.rs  cache.rs  lib.rs  scheduler.rs  streaming.rs
crates/gaba-singularity/: Cargo.toml
crates/gaba-singularity/benches/: extended_sequences_benchmark.rs  metal_bench.rs  prime_sequences.rs  singularity_bench.rs
crates/gaba-singularity/src/: federated.rs  federated_http.rs  fusion_engine.rs  gpu_optimizer.rs  hardware_detector.rs  jit.rs  jit_codegen.rs  jit_executor.rs  kernel_registry.rs  lib.rs  orchestrator.rs  performance_db.rs  prime_optimizer.rs  profiler.rs  runtime_profiler.rs  selector.rs
crates/gaba-singularity/tests/: extended_sequences_test.rs  integration_test.rs
crates/gaba-train/: Cargo.toml
crates/gaba-train-cli/: Cargo.toml
crates/gaba-train-cli/src/: adam.rs  augmentation.rs  data.rs  dataset_generator.rs  dataset_generator_ext.rs  demand_forecasting.rs  driver_behavior.rs  enhanced_route_model.rs  federated_training.rs  lib.rs  main.rs  metrics.rs  models.rs  models_extended.rs  onnx_export.rs  realtime_updates.rs  train.rs  vehicle_maintenance.rs  workspace.rs
crates/gaba-train-cli/src/commands/: auto_test.rs  benchmark_all_30.rs  benchmark_edge.rs  convert_datasets.rs  embedded.rs  engine_status.rs  generate_datasets.rs  mod.rs  optimize.rs  profile.rs  test_router.rs  train_router.rs  workflow.rs
crates/gaba-train/benches/: singularity_benchmark.rs  training_benchmark.rs
crates/gaba-train/src/: advanced_optimizations.rs  auto_testing.rs  checkpoint.rs  data.rs  data_converted.rs  engine_coordinator.rs  gradient_accumulation.rs  lib.rs  memory_pool.rs  metrics.rs  models.rs  models_advanced_audio.rs  models_advanced_nlp.rs  models_advanced_sensor.rs  models_advanced_vision.rs  models_edge.rs  models_edge_sensor.rs  models_multi_domain.rs  monitoring.rs  optimizers.rs  profiling.rs  pruning.rs  streaming.rs  training.rs  training_converted.rs
crates/gaba-train/src/compression/: distillation.rs  low_rank.rs  mod.rs
crates/gaba-train/src/optimizers/: adam.rs  mod.rs  sgd.rs
crates/gaba-train/src/peft/: adapter.rs  lora.rs  mod.rs  qlora.rs
crates/gaba-train/src/quantization/: awq.rs  gptq.rs  groupwise.rs  mixed_precision.rs  mod.rs  smoothquant.rs
crates/gaba-train/src/schedulers/: mod.rs
crates/gaba-train/tests/: singularity_integration.rs
crates/gaba-workflows/: Cargo.toml
crates/gaba-workflows/src/: lib.rs  pipeline.rs
crates/onnx-ir/: Cargo.toml  build.rs
crates/onnx-ir/src/: coalesce.rs  from_onnx.rs  ir.rs  proto_conversion.rs  util.rs
crates/onnx-ir/src/node/: bernoulli.rs  cast.rs  eye_like.rs  random.rs  random_like.rs
crates/onnx-ir/src/protos/: mod.rs
docs/: README.md  api-reference.md  architecture.md  deployment.md  getting-started.md  integration-guide.md  performance.md
docs/benchmarks/: README.md  TRAINING_BENCHMARKS.md
docs/gaba-burn-cli/: CLI_USER_GUIDE.md  QUICK_START.md
docs/general/: CITATION.cff  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  POEM.md  QUICK_START.md
docs/model-training/: README.md  TRAINING_GUIDE.md
docs/releases/: epic-release-0.1.0.md
examples/: README.md  driver_behavior.rs  federated_learning.rs  realtime_updates.rs
examples/gaba/: Cargo.toml  demand_forecasting.rs  edge_inference.rs  memory_system.rs  singularity_demo.rs  vehicle_maintenance.rs
xtask/src/commands/: bench_search.rs  mod.rs
