[package]
name = "gaba-export"
version = "0.1.0"
edition = "2021"

[features]
default = ["onnx"]
onnx = ["prost", "prost-types"]
tflite = ["flatbuffers"]
coreml = []
webnn = ["wasm-bindgen"]

[dependencies]
burn = { path = "../burn", default-features = false }
gaba-native-kernels = { path = "../gaba-native-kernels" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ONNX support
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }

# TFLite support
flatbuffers = { version = "24.3", optional = true }

# WebNN/WASM support
wasm-bindgen = { version = "0.2", optional = true }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
approx = "0.5"
tempfile = "3.20"

[build-dependencies]
prost-build = "0.13"
