[package]
name = "gaba-native-kernels"
version = "0.1.0"
edition = "2021"

[features]
# When enabled, build.rs will attempt to compile the Zig kernel and link it.
zig = []
accelerate = []
metal = ["dep:metal"]
ml-inference = ["burn-inference"]

[dependencies]
anyhow = "1.0"
burn-inference = { path = "../burn-inference", optional = true }
chrono = "0.4"
rayon = "1.10"
num_cpus = "1.16"
rand = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc = "0.2"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", optional = false }

[[bench]]
name = "bench_gemm"
harness = false

[[bench]]
name = "bench_ml_kernels"
harness = false
