[package]
name = "gaba-pqc"
version = "0.1.0"
edition = "2021"
description = "Post-quantum cryptography for Burn training results encryption"
license = "MIT OR Apache-2.0"

[features]
default = ["foundation"]
foundation = []
metal = ["dep:metal", "dep:objc", "dep:objc-foundation"]
full = ["metal"]

[dependencies]
# Cryptography
blake3 = "1.5"
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt", "fs"] }

# Metal acceleration (macOS only)
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
