[package]
name = "gaba-singularity"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[features]
zig = ["gaba-native-kernels/zig"]
metal = ["gaba-native-kernels/metal"]

[dependencies]
gaba-native-kernels = { path = "../gaba-native-kernels" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.1"
ordered-float = "4.5"
rand = "0.8"
libc = "0.2"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.47", features = ["rt", "macros"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.47", features = ["rt", "macros"] }

[[bench]]
name = "singularity_bench"
harness = false

[lints]
workspace = true
