[package]
name = "gaba-train-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gaba-train"
path = "src/main.rs"

[dependencies]
gaba-train = { path = "../gaba-train" }
gaba-singularity = { path = "../gaba-singularity" }
burn = { path = "../burn", features = ["ndarray", "train", "autodiff"] }

# Data handling
ndarray = { version = "0.15", features = ["serde"] }
ndarray-npy = "0.8"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Training utilities
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.10"
tokio = { version = "1.47", features = ["full"] }

# Progress tracking
indicatif = "0.17"

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
colored = "2.1"
num_cpus = "1.16"

# Gaba components
gaba-pqc = { path = "../gaba-pqc", optional = true }
gaba-metal-backend = { path = "../gaba-metal-backend", optional = true }
gaba-native-kernels = { path = "../gaba-native-kernels" }

[features]
default = []
full = ["pqc", "metal", "zig"]
pqc = ["dep:gaba-pqc"]
metal = ["dep:gaba-metal-backend", "gaba-pqc/metal"]
zig = []

[dev-dependencies]
approx = "0.5"
tempfile = "3.20"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = false
panic = "unwind"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
