[package]
name = "gaba-train"
version = "0.1.0"
edition = "2021"

[features]
default = []
zig = []

[dependencies]
# Burn core
burn = { path = "../burn", features = ["train", "ndarray"], default-features = false }

# Native kernels
gaba-native-kernels = { path = "../gaba-native-kernels" }

# Data handling
ndarray = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Training utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing
rayon = "1.10"

# Progress tracking
indicatif = "0.17"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
